# robocar

./: .gitignore  README.md
RobocarController/: ManualController.py
follow-the-line/: 128_mask_gen.tflite  camera_script.py  main.py  main2.py  mask_generator_model.py  raycasts_reader.py  requirements.txt  trained_model.h5  trained_model.tflite
follow-the-line/src/motor/: Motor.py
follow-the-line/src/raycast_calculator/: raycaster
lidar/: main.cpp
testing/lidar_test/cpp/: CMakeLists.txt
testing/lidar_test/python/: main.py
